# clap-py

./: .gitignore  404.html  CHANGELOG.md  README.md  example.py  index.html  main.py  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: ci.yml
.zed/: tasks.json
actions/: index.html
arg/: index.html
clap/: __init__.py  __init__.pyi  api.py  core.py  decorator.py  help.py  models.py  parser.py  stuff.py  styling.py
command/: index.html
core/: index.html
docs/: mkdocs.yml
docs/docs/: ArgAction.md  actions.md  arg.md  command.md  core.md  group.md  help.md  index.md  models.md  mutex_group.md  parser.md  quickstart.md  styling.md  subcommand.md
docs/docs/quickstart/: 01_quick.py  02_app_settings.py  02_apps.py  03_01_flag_count.py  03_02_option.py  03_02_option_mult.py  03_03_positional.py  03_03_positional_mult.py  03_06_optional.py  04_01_enum.py  04_02_groups.py  04_04_custom.py
docs/plugins/: __init__.py  insert_command_output.py  insert_stdout.py
examples/: git.py  typst.py
group/: index.html
help/: index.html
models/: index.html
mutex_group/: index.html
parser/: index.html
quickstart/: 01_quick.py  02_app_settings.py  02_apps.py  03_01_flag_bool.py  03_01_flag_count.py  03_02_option.py  03_02_option_mult.py  03_03_positional.py  03_04_subcommands.py  03_05_default_values.py  03_06_optional.py  04_04_custom.py  index.html
search/: search_index.json
stylesheets/: custom.css
styling/: index.html
subcommand/: index.html
tests/: smoke_test.py  test_actions.py  test_basic_arguments.py  test_collections.py  test_enums.py  test_groups_and_mutexes.py  test_help.py  test_internals.py  test_subcommands.py
