[project]
name = "clap-py"
authors = [{name = "Aditya Singh", email = "1adityasingh@proton.me"}]
maintainers = [{name = "Aditya Singh", email = "1adityasingh@proton.me"}]
version = "0.8.0"
description = "A declarative and type-safe command-line argument parser."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[project.urls]
Homepage = "https://github.com/adityasz/clap-py"
Documentation = "https://adityasz.github.io/clap-py"
Repository = "https://github.com/adityasz/clap-py.git"
Issues = "https://github.com/adityasz/clap-py/issues"
Changelog = "https://github.com/adityasz/clap-py/blob/master/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "clap"
module-root = ""

[dependency-groups]
dev = [
    "basedpyright>=1.31.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.30.1",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.2",
    "rich>=14.1.0",
    "ruff>=0.13.3",
]

[project.entry-points."mkdocs.plugins"]
insert_stdout = "docs.plugins.insert_stdout:InsertStdoutPlugin"

[tool.ruff]
line-length = 99

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint]
preview = true
select = ["B", "C4", "E", "EM", "EXE", "F", "I", "ISC003", "NPY", "PD", "PERF", "PIE",
          "PLE", "PT", "PYI", "Q004", "FURB", "RET", "RUF", "SIM", "UP", "W", "YTT"]
ignore = ["UP007", "UP045", "E701", "SIM108", "PYI001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.basedpyright]
typeCheckingMode = "standard"
reportConstantRedefinition = true
reportDeprecated = true
reportDuplicateImport = true
reportIgnoreCommentWithoutRule = true
reportMatchNotExhaustive = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
